# netlib-blas

./: README.md  azure-pipelines.yml  meson.build
src/: meson.build
tests/: ex1.F90  ex2.F90  ex3.F90
